--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@
 #Gradle temporary files
 target/
 
+# track the following gradle files
+!gradlew
+!gradlew.bat
+!gradle/wrapper/gradle-wrapper.jar
+!gradle/wrapper/gradle-wrapper.properties
+
 #Eclipse files
 **/.project
 **/.classpath
