--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,9 @@ plugins {
     id "org.sonarqube" version "2.8"
 }
 
-bootJar {
-    baseName = 'gs-spring-boot'
-    version =  '0.1.0'
-}
-
 jacoco {
     toolVersion = "0.8.5"
-    reportsDir = file("$buildDir/customJacocoReportDir")
+    reportsDir = file("$buildDir/jacocoReportDir")
 }
 
 group 'ch.uzh.ifi.seal'
@@ -38,8 +33,13 @@ springBoot {
 }
 
 dependencies {
+    implementation 'org.mapstruct:mapstruct:1.3.1.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
+    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
 
@@ -48,6 +48,11 @@ dependencies {
     }
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
+}
+
+bootJar {
+    baseName = 'gs-spring-boot'
+    version = '0.1.0'
 }
 
 test {
