--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       # uncomment both tokens for assignment 2-4
-      # SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # auto-generated
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # auto-generated
       HEROKU_KEY: ${{ secrets.HEROKU_API_KEY }}
       HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
       HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
@@ -20,13 +20,13 @@ jobs:
     # checkout repository code
     - uses: actions/checkout@v1
     
-    # installs java 11
+    # installs java 13
     - uses: actions/setup-java@v1
       with:
-        java-version: 1.11
+        java-version: 1.13
 
-    # uncomment for assignment 2-4 
-    # - run: gradle sonarqube
+    # uncomment for assignment 2-4
+#    - run: gradle sonarqube
     
     # create .netrc file for heroku authentication
     # https://devcenter.heroku.com/articles/authentication
