--- a/build.gradle
+++ b/build.gradle
@@ -70,4 +70,27 @@ jacocoTestReport {
     }
 }
 
+File secretPropsFile = file('./local.properties')
+if (secretPropsFile.exists()) {
+    Properties p = new Properties()
+    p.load(new FileInputStream(secretPropsFile))
+    p.each { name, value ->
+        ext[name] = value
+    }
+}
+//else {
+//    throw new IllegalStateException("local.properties could not be located for build process")
+//}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", project.sonarProjectKey
+        property "sonar.organization", project.sonarOrganization
+        property "sonar.host.url", "https://sonarcloud.io"
+        property "sonar.login", project.sonarToken
+        property "sonar.coverage.jacoco.xmlReportPaths", ["$buildDir/jacocoReportDir/test/jacocoTestReport.xml"]
+        property "sonar.cpd.exclusions", "**/entity/*.java,**/rest/dto/*.java"
+    }
+}
+
 defaultTasks 'bootJar', 'build'
