--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: deploy
+name: Deploy Project
 
 on: 
   push:
@@ -19,20 +19,21 @@ jobs:
       HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
 
     steps:
-    # checkout repository code
-    - uses: actions/checkout@v1
-    
-    # installs java 13
-    - uses: actions/setup-java@v1
+    - name: checkout repository code
+      uses: actions/checkout@v1
+
+    - name: install Java JDK 13
+      uses: actions/setup-java@v1
       with:
         java-version: 1.13
 
     # uncomment for assignment 2-4
-    - run: gradle test jacocoTestReport sonarqube -PsonarToken=$SONAR_TOKEN -PsonarProjectKey=$SONAR_PROJECT_KEY -PsonarOrganization=$SONAR_ORG
-    
-    # create .netrc file for heroku authentication
+    - name: test the project and upload test report -> sonarqube
+      run: ./gradlew test jacocoTestReport sonarqube -PsonarToken=$SONAR_TOKEN -PsonarProjectKey=$SONAR_PROJECT_KEY -PsonarOrganization=$SONAR_ORG
+
     # https://devcenter.heroku.com/articles/authentication
-    - run: |+
+    - name: create .netrc file for heroku authentication
+      run: |+
           cat >~/.netrc <<EOF
           machine api.heroku.com
               login $HEROKU_EMAIL
@@ -41,10 +42,12 @@ jobs:
               login $HEROKU_EMAIL
               password $HEROKU_KEY
           EOF
-    
-    # login with .netrc file
-    - run: heroku login     
-    
-    # deploy code          
-    - run: heroku git:remote -a $HEROKU_APP_NAME  
-    - run: git push heroku HEAD:refs/heads/master
+
+    - name: login to heroku cli
+      run: heroku login
+
+    - name: add heroku as git remote
+      run: heroku git:remote -a $HEROKU_APP_NAME
+
+    - name: deploy project to heroku
+      run: git push heroku HEAD:refs/heads/master
